# cetautomatix

./: .env.example  README.md  pyproject.toml
app/: main.py
app/clients/: __init__.py  _albertclient.py  _genericasynhttpclient.py
app/clients/prompts/: _templates.py
app/config/: lifespan.py  logging.py  settings.py
app/core/: __init__.py  _clientsmanager.py
app/routers/: admin.py  cerfas.py  collections.py  docsummary.py  models.py
app/routers/schemas/: docsummary.py
ui/: .env.example  stream_main.py
ui/components/: sidebar.py
